--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <script src="index.js" defer></script>
 <script src="/error.js" defer></script>
 <div class="title">
-    <h1 id="title1">Char-UV</h1>
+    <h1 id="title1">DatDoggyUnblocker</h1>
 </div>
-<title>charuv</title>
+<title>DatDoggy-UB</title>
 
   <form id="uv-form" style="text-align: center; width: 700px; margin: 128px auto 0;">
          <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
@@ -25,5 +25,6 @@
             font-family: Arial, sans-serif; /* Arial font */
              font-size: 70px; /* Adjust font size as needed */ f
         }
+        
        
     </style>
